# simple-text-editor

./: .gitignore  Makefile  build-script  client.py  cpp_server  cpp_server.cpp  editor.html  gui.cpp  huffman_coding  huffman_coding.cpp  mem_management.cpp  meson.build  my_c_code.c  my_c_code.h  my_cpp_code.cpp  rust_server.rs  server.c  socket_client.cpp  socket_server.cpp  text_editor  text_editor.cpp
bazel-demo/cpp-tutorial/stage1/: bazel-bin  bazel-out
bazel-demo/cpp-tutorial/stage2/: bazel-bin  bazel-out  bazel-stage2
c-demo/: CMakeLists.txt  Makefile  README.md  conanfile.txt
c-demo/src/: connect.c  simple.c
cpp-demo/: linkedlist.cpp  linkedlist.h  oop  oop.cpp
cpp-demo2/cpp-tutorial/stage1/: bazel-stage1  bazel-testlogs
ipc_message_queues/: receiver  receiver.cpp  receiver.py  sender  sender.cpp  sender.py
ipc_pipe/: cpp_reader  cpp_reader.cpp  python_writer.py
ipc_shared_memory/: shm_reader.py  shm_writer  shm_writer.cpp
lua-demo/: embed-lua.cpp  lua-interpreter.c  test.lua
network_python/: config.txt  connect_to_device.py  main.py  message_security.py  net_parser.py
rust-demo/: Cargo.toml  diesel.toml  docker-compose.yml  main  main.rs  start.sh
rust-demo/src/: main.rs  my_module.rs
swig-python-cpp/: embed-python.cpp  main.cpp  mymath.cpp  mymath.h  mymath.i  mymath.py  mymath_wrap.cxx  myscript.py
tcp/: cpp_http_client.cpp  cpp_http_server.cpp  cpp_server  cpp_server.cpp  httplib.h  python_client.py
tls/: cert.crt  cert.key  tls_client.py  tls_server.py
zig-demo/: build.zig  build.zig.zon
zig-demo/src/: orderbook.zig
(+1 files in other folders)
